Version 2.6
-----------------------------
05/29/08: beazley
          Completely revamped the testing system to use the unittest module for everything.
          Added additional tests to cover new errors/warnings.

Version 2.5
-----------------------------
05/28/08: beazley
          Fixed a bug with writing lex-tables in optimized mode and start states.
          Reported by Kevin Henry.

Version 2.4
-----------------------------
05/04/08: beazley
          A version number is now embedded in the table file signature so that 
          yacc can more gracefully accomodate changes to the output format
          in the future.

05/04/08: beazley
          Removed undocumented .pushback() method on grammar productions.  I'm
          not sure this ever worked and can't recall ever using it.  Might have
          been an abandoned idea that never really got fleshed out.  This
          feature was never described or tested so removing it is hopefully
          harmless.

05/04/08: beazley
          Added extra error checking to yacc() to detect precedence rules defined
          for undefined terminal symbols.   This allows yacc() to detect a potential
          problem that can be really tricky to debug if no warning message or error
          message is generated about it.

05/04/08: beazley
          lex() now has an outputdir that can specify the output directory for
          tables when running in optimize mode.  For example:

             lexer = lex.lex(optimize=True, lextab="ltab", outputdir="foo/bar")
 
          The behavior of specifying a table module and output directory are
          more aligned with the behavior of yacc().
          
05/04/08: beazley
          [Issue 9]
          Fixed filename bug in when specifying the modulename in lex() and yacc(). 
          If you specified options such as the following:

             parser = yacc.yacc(tabmodule="foo.bar.parsetab",outputdir="foo/bar")
